add about and tag

--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -211,13 +211,17 @@ navbar:
     # Status: 
     #   path: https://status.ohevan.com/
     #   icon: fa-regular fa-chart-bar
-    # About: 
-    #   icon: fa-regular fa-user
-    #   submenus:
-    #     Me: /about
-    #     Github: https://github.com/EvanNotFound/hexo-theme-redefine
-    #     Blog: https://ohevan.com
-    #     Friends: /friends
+    About: 
+      icon: fa-regular fa-user
+      path: /about
+    Tags:
+      icon: fa-solid fa-tags #图标
+      path: /tags/ #链接
+      # submenus:
+        # 作者: 
+        # Github: https://github.com/EvanNotFound/hexo-theme-redefine
+        # Blog: https://ohevan.com
+        # Friends: /friends
     # Links: 
     #   icon: fa-regular fa-link
     #   submenus:
