--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -25,10 +25,7 @@ info:
 # Docs: https://redefine-docs.ohevan.com/basic/defaults
 defaults:
   # Favicon
-  favicon: data:image/svg+xml,
-    <svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22>
-    <text y=%22.9em%22 font-size=%2290%22>🐵</text>
-    </svg>
+  favicon: images/favicon.svg
   # Site logo
   logo: 
   # Site avatar
