--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,6 +14,9 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           # If your repository depends on submodule, please see: https://github.com/actions/checkout
           submodules: recursive
+      - name: Restore file last modified time
+        run: |
+          find source/_posts -name '*.md' | while read file; do touch -d "$(git log -1 --format="%at" -- $file | xargs -I {} date -d @{} +%Y-%m-%dT%H:%M:%S)" "$file"; done
       - name: Use Node.js 22.13.0
         uses: actions/setup-node@v4
         with:
