Add `靜華水閱` to links list

--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -6,3 +6,8 @@
         description: 😀😀😀
         avatar: https://devherohub.com/wp-content/uploads/2024/12/logo-1.webp
         thumbnail:
+      - name: 靜華水閱
+        link: https://fantajinokaze.github.io/
+        description: 靜華水閱
+        avatar: https://fantajinokaze.github.io/images/favicon.ico
+        thumbnail:
